<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nameLabel"
            android:ems="15"
            android:id="@+id/name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lastnameLabel"
            android:ems="15"
            android:id="@+id/lastname"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ageLabel"
            android:ems="15"
            android:inputType="numberDecimal"
            android:id="@+id/age"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderLabel"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"/>

            <RadioButton
                android:id="@+id/femaleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="K" />

            <RadioButton
                android:id="@+id/otherRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inna"/>
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dobLabel"
        android:inputType="date"
        android:ems="15"
        android:id="@+id/dateOfBuy"/>

    <CheckBox
        android:id="@+id/rulesAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulesAcceptLabel"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitHandler"
        android:text="@string/buttonLabel"/>

</LinearLayout>